Creating expantion service sub-item for explantion

--- a/Services/index.html
+++ b/Services/index.html
@@ -79,29 +79,133 @@
       <div class="service-card" data-service="seo">
         <h3>Google SEO – Organic Domination</h3>
       </div>
+
       <div class="service-detail" id="seo">
-        <ul>
-          <li>Local SEO to appear on Google Maps</li>
-          <li>On-page & technical SEO for websites</li>
-          <li>Google Business Profile optimization (photos, reviews, Q&A)</li>
-          <li>Competitive analysis & positioning</li>
-          <li>Targeted keyword research</li>
-          <li>Review generation and reputation building</li>
-          <li>Structured data + schema markup</li>
-          <li>Lightweight website for better rankings</li>
-        </ul>
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>Local SEO to appear on Google Maps</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            We optimize your Google Business Profile, set accurate service areas, add photos, and configure categories to help you rank in your city and surrounding areas.
+          </div>
+        </div>
+
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>On-page & technical SEO for websites</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            We improve your site’s structure, page speed, internal linking, meta tags, headings, and ensure all content is readable and indexable by search engines.
+          </div>
+        </div>
+
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>Google Business Profile optimization</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            We'll manage your business listing: adding photos, updating hours, writing descriptions, answering public questions, and encouraging customer reviews.
+          </div>
+        </div>
+
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>Competitive analysis & positioning</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            We study your top local competitors, identify their SEO strengths and gaps, and position your site to outperform them in both local and organic search.
+          </div>
+        </div>
+
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>Targeted keyword research</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            We use keyword tools to find high-volume, low-competition phrases that match your services — including hidden gems your competitors overlook.
+          </div>
+        </div>
+
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>Review generation and reputation building</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            We'll help set up automations or strategies to gather real reviews, guide customers through the process, and protect your reputation across platforms.
+          </div>
+        </div>
+
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>Structured data + schema markup</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            We add advanced schema (FAQ, Services, Reviews, etc.) to your site’s code so Google better understands your content and may show enhanced snippets.
+          </div>
+        </div>
+
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>Lightweight website for better rankings</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            Our hand-coded websites are fast, responsive, and easy for both users and search engines to navigate — which directly improves your rankings.
+          </div>
+        </div>
       </div>
 
       <div class="service-card" data-service="ai-seo">
         <h3>AI Platform SEO – The Future of Search</h3>
       </div>
+
       <div class="service-detail" id="ai-seo">
-        <ul>
-          <li>Rank in ChatGPT, Gemini, Grok & others</li>
-          <li>Clean, fast-loading structure for AI-readability</li>
-          <li>Conversational SEO for voice/chat-based searches</li>
-          <li>Integrate into AI-accessible data formats</li>
-        </ul>
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>Rank in ChatGPT, Gemini, Grok & others</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            We structure your site and content to be indexed by AI-driven platforms like ChatGPT, Gemini, and Grok — making sure your business shows up when users ask questions related to your services.
+          </div>
+        </div>
+
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>Clean, fast-loading structure for AI-readability</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            We clean up your HTML, eliminate bloat, and ensure your site loads fast — so AI tools can easily crawl and understand your structure without friction.
+          </div>
+        </div>
+
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>Conversational SEO for voice/chat-based searches</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            We rewrite and format your content to match the way people ask questions in natural language — boosting visibility in AI-driven conversations and voice assistants.
+          </div>
+        </div>
+
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>Integrate into AI-accessible data formats</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            We make your services visible to AI tools by feeding your data into structured formats like JSON-LD, sitemaps, and other sources AI can ingest directly.
+          </div>
+        </div>
       </div>
     </section>
 
@@ -112,37 +216,139 @@
       <div class="service-card" data-service="google-ads">
         <h3>Google Ads – Instant Visibility</h3>
       </div>
+
       <div class="service-detail" id="google-ads">
-        <ul>
-          <li>Search & Display ad campaigns</li>
-          <li>Call-only ads for service businesses</li>
-          <li>Google Guaranteed Setup (for eligible industries)</li>
-          <li>Landing page optimization for conversions</li>
-          <li>Budget strategy & ROI tracking</li>
-        </ul>
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>Search & Display ad campaigns</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            We run high-performance ad campaigns on Google Search and Display Network, targeting users with real intent to buy your product or service.
+          </div>
+        </div>
+
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>Call-only ads for service businesses</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            We create mobile-first ads that directly trigger phone calls — perfect for local services like locksmiths, plumbers, or clinics needing fast lead response.
+          </div>
+        </div>
+
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>Google Guaranteed Setup (for eligible industries)</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            We’ll help your business qualify for the Google Guarantee program, adding extra trust and a green badge to your local ads — boosting clicks and conversions.
+          </div>
+        </div>
+
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>Landing page optimization for conversions</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            We optimize the page your ads point to — with clear copy, fast load times, and lead forms — ensuring you get the most out of every click.
+          </div>
+        </div>
+
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>Budget strategy & ROI tracking</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            We set smart daily budgets, define cost-per-lead goals, and track ROI using conversion tools — so you're always spending with clarity and purpose.
+          </div>
+        </div>
       </div>
 
       <div class="service-card" data-service="meta-ads">
         <h3>Meta Ads – Facebook & Instagram</h3>
       </div>
+
       <div class="service-detail" id="meta-ads">
-        <ul>
-          <li>Full-funnel campaigns: Awareness → Leads → Retargeting</li>
-          <li>Pixel setup and conversion tracking</li>
-          <li>Organic strategy (posts, reels, hashtags)</li>
-          <li>Community targeting through local groups</li>
-        </ul>
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>Full-funnel campaigns: Awareness → Leads → Retargeting</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            We build multi-stage ad funnels that guide users from discovering your brand to taking action — whether it's booking, buying, or contacting you.
+          </div>
+        </div>
+
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>Pixel setup and conversion tracking</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            We install the Meta Pixel on your site to track user actions, measure ad performance, and create retargeting audiences for higher ROI.
+          </div>
+        </div>
+
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>Organic strategy (posts, reels, hashtags)</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            Alongside ads, we help craft an organic presence using content that attracts followers naturally — including post schedules, reel ideas, and hashtag strategy.
+          </div>
+        </div>
+
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>Community targeting through local groups</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            We use Meta’s location-based tools and group engagement strategies to connect your business with real people in your area, building local trust.
+          </div>
+        </div>
       </div>
 
       <div class="service-card" data-service="platform-ads">
         <h3>Platform-Specific Ads – Hyperlocal Reach</h3>
       </div>
+
       <div class="service-detail" id="platform-ads">
-        <ul>
-          <li>Thumbtack & Yelp ad strategy + bidding</li>
-          <li>Bing Ads setup & optimization</li>
-          <li>Directory promotion (Nextdoor, Angi, etc.)</li>
-        </ul>
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>Thumbtack & Yelp ad strategy + bidding</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            We manage your Thumbtack and Yelp advertising with proper bidding strategy, optimized profiles, and response tactics that help you stand out and win leads.
+          </div>
+        </div>
+
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>Bing Ads setup & optimization</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            While often overlooked, Bing Ads reach millions of desktop users. We configure campaigns with high intent keywords and optimize for cost-effective clicks.
+          </div>
+        </div>
+
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>Directory promotion (Nextdoor, Angi, etc.)</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            We list and optimize your presence on local directories where homeowners and communities actively search for services — increasing trust and exposure.
+          </div>
+        </div>
       </div>
     </section>
 
@@ -153,13 +359,47 @@
       <div class="service-card" data-service="branding">
         <h3>Branding & Content</h3>
       </div>
+
       <div class="service-detail" id="branding">
-        <ul>
-          <li>Logo & brand kit creation</li>
-          <li>Business naming + slogans</li>
-          <li>Social media content packs (posts + stories)</li>
-          <li>Company video trailers or explainers</li>
-        </ul>
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>Logo & brand kit creation</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            We design a clean, modern logo and build a full brand kit including color palettes, fonts, icons, and usage guidelines to create consistency across platforms.
+          </div>
+        </div>
+
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>Business naming + slogans</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            We help name your business with brandable, domain-ready options, and craft memorable taglines that match your industry and target audience.
+          </div>
+        </div>
+
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>Social media content packs (posts + stories)</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            We create ready-to-post visuals and templates for Instagram, Facebook, and LinkedIn, including feed posts, story slides, and design tips for your team.
+          </div>
+        </div>
+
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>Company video trailers or explainers</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            We produce short, professional video content — either animated or live-action — to showcase your brand story, services, or client testimonials.
+          </div>
+        </div>
       </div>
     </section>
 
@@ -170,12 +410,37 @@
       <div class="service-card" data-service="chatbot">
         <h3>AI Chatbot Integration</h3>
       </div>
+
       <div class="service-detail" id="chatbot">
-        <ul>
-          <li>Custom chatbot with business personality</li>
-          <li>Lead capture, FAQs, call booking</li>
-          <li>Works 24/7 to help close leads</li>
-        </ul>
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>Custom chatbot with business personality</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            We build a chatbot that sounds and feels like your business — trained on your tone, services, and language — making it feel natural for your customers.
+          </div>
+        </div>
+
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>Lead capture, FAQs, call booking</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            The chatbot can answer common questions, schedule calls, and collect lead info — all automatically, saving time and turning visitors into clients.
+          </div>
+        </div>
+
+        <div class="service-bullet" data-bullet>
+          <div class="bullet-header">
+            <span>Works 24/7 to help close leads</span>
+            <span class="bullet-icon">›</span>
+          </div>
+          <div class="bullet-detail">
+            Unlike your team, your AI assistant never sleeps. It handles inquiries any time of day and keeps your business moving even after hours.
+          </div>
+        </div>
       </div>
     </section>
   </main>
