Change icons int Pricing and Services pages

--- a/Pricing/index.html
+++ b/Pricing/index.html
@@ -79,9 +79,9 @@
         <p class="price">$499</p>
         <p>A simple but powerful online presence built to rank.</p>
         <ul class="feature-checklist">
-          <li>✅ Landing page</li>
-          <li>✅ Basic SEO setup</li>
-          <li>✅ Google Business setup</li>
+          <li><img src="../Assets/check.svg" alt="V" /> Landing page</li>
+          <li><img src="../Assets/check.svg" alt="V" /> Basic SEO setup</li>
+          <li><img src="../Assets/check.svg" alt="V" /> Google Business setup</li>
         </ul>
         <a href="../Contact/" class="choose-plan">Choose Plan</a>
       </div>
@@ -90,9 +90,9 @@
         <p class="price">$749</p>
         <p>Ideal for growing businesses with more advanced needs.</p>
         <ul class="feature-checklist">
-          <li>✅ Full website</li>
-          <li>✅ Noticeable in ChatGPT, Gemini</li>
-          <li>✅ Google & Bing Maps optimization</li>
+          <li><img src="../Assets/check.svg" alt="V" /> Full website</li>
+          <li><img src="../Assets/check.svg" alt="V" /> Noticeable in ChatGPT, Gemini</li>
+          <li><img src="../Assets/check.svg" alt="V" /> Google & Bing Maps optimization</li>
         </ul>
         <a href="../Contact/" class="choose-plan">Choose Plan</a>
       </div>
@@ -101,9 +101,9 @@
         <p class="price">Custom</p>
         <p>Tailored solutions for large-scale digital projects.</p>
         <ul class="feature-checklist">
-          <li>✅ Dedicated campaign strategy</li>
-          <li>✅ Aggressive AI Chatbot placement</li>
-          <li>✅ Custom chatbot persona creation</li>
+          <li><img src="../Assets/check.svg" alt="V" /> Dedicated campaign strategy</li>
+          <li><img src="../Assets/check.svg" alt="V" /> Aggressive AI Chatbot placement</li>
+          <li><img src="../Assets/check.svg" alt="V" /> Custom chatbot persona creation</li>
         </ul>
         <a href="../Contact/" class="choose-plan">Choose Plan</a>
       </div>
@@ -122,75 +122,75 @@
         <tbody>
           <tr>
             <td>Landing page</td>
-            <td>✅</td>
-            <td>✅</td>
-            <td>✅</td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
           </tr>
           <tr>
             <td>Full website</td>
             <td></td>
-            <td>✅</td>
-            <td>✅</td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
           </tr>
           <tr>
             <td>Mobile responsive & fast</td>
-            <td>✅</td>
-            <td>✅</td>
-            <td>✅</td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
           </tr>
           <tr>
             <td>Basic SEO setup</td>
-            <td>✅</td>
-            <td>✅</td>
-            <td>✅</td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
           </tr>
           <tr>
             <td>Google Business setup</td>
-            <td>✅</td>
-            <td>✅</td>
-            <td>✅</td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
           </tr>
           <tr>
             <td>AI Chatbot optimization (ChatGPT, Gemini)</td>
             <td></td>
-            <td>✅</td>
-            <td>✅</td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
           </tr>
           <tr>
             <td>Google & Bing Maps optimization</td>
             <td></td>
-            <td>✅</td>
-            <td>✅</td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
           </tr>
           <tr>
             <td>Ongoing SEO & content updates</td>
             <td></td>
-            <td>✅</td>
-            <td>✅</td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
           </tr>
           <tr>
             <td>Dedicated campaign strategy</td>
             <td></td>
             <td></td>
-            <td>✅</td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
           </tr>
           <tr>
             <td>Real time marketing</td>
             <td></td>
             <td></td>
-            <td>✅</td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
           </tr>
           <tr>
             <td>Google ads campaign managment</td>
-            <td>✅</td>
-            <td>✅</td>
-            <td>✅</td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
           </tr>
           <tr>
             <td>Noticeable on Yelp</td>
-            <td>✅</td>
-            <td>✅</td>
-            <td>✅</td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
           </tr>
           <tr>
             <td></td>
