--- a/Services/index.html
+++ b/Services/index.html
@@ -75,7 +75,7 @@
 
     <!-- Section: Search Visibility -->
     <section class="service-group">
-      <h2 class="group-title">🔍 Search Visibility</h2>
+      <h2 class="group-title"><img src="../Assets/search.svg" alt="search" /> Search Visibility</h2>
       <div class="service-card" data-service="seo">
         <h3>Google SEO – Organic Domination</h3>
       </div>
@@ -211,7 +211,7 @@
 
     <!-- Section: Advertising & Reach -->
     <section class="service-group">
-      <h2 class="group-title">💰 Advertising & Reach</h2>
+      <h2 class="group-title"><img src="../Assets/eye.svg" alt="eye" /> Advertising & Reach</h2>
 
       <div class="service-card" data-service="google-ads">
         <h3>Google Ads – Instant Visibility</h3>
@@ -354,7 +354,7 @@
 
     <!-- Section: Brand & Engagement -->
     <section class="service-group">
-      <h2 class="group-title">🎨 Brand & Engagement</h2>
+      <h2 class="group-title"><img src="../Assets/paintbrush.svg" alt="Paint brush" /> Brand & Engagement</h2>
 
       <div class="service-card" data-service="branding">
         <h3>Branding & Content</h3>
@@ -405,7 +405,7 @@
 
     <!-- Section: Conversion Tools -->
     <section class="service-group">
-      <h2 class="group-title">💬 Conversion Tools</h2>
+      <h2 class="group-title"><img src="../Assets/bot.svg" alt="Bot" /> Conversion Tools</h2>
 
       <div class="service-card" data-service="chatbot">
         <h3>AI Chatbot Integration</h3>
