--- a/Pricing/index.html
+++ b/Pricing/index.html
@@ -75,37 +75,26 @@
     
     <div class="pricing-boxes">
       <div class="price-card">
-        <h2>Starter</h2>
-        <p class="price">$499</p>
-        <p>A simple but powerful online presence built to rank.</p>
-        <ul class="feature-checklist">
-          <li><img src="../Assets/check.svg" alt="V" /> Landing page</li>
-          <li><img src="../Assets/check.svg" alt="V" /> Basic SEO setup</li>
-          <li><img src="../Assets/check.svg" alt="V" /> Google Business setup</li>
-        </ul>
-        <a href="../Contact/" class="choose-plan">Choose Plan</a>
-      </div>
-      <div class="price-card">
-        <h2>Advanced</h2>
+        <h2>Starting with RankMind</h2>
         <p class="price">$749</p>
         <p>Ideal for growing businesses with more advanced needs.</p>
         <ul class="feature-checklist">
           <li><img src="../Assets/check.svg" alt="V" /> Full website</li>
-          <li><img src="../Assets/check.svg" alt="V" /> Noticeable in ChatGPT, Gemini</li>
+          <li><img src="../Assets/check.svg" alt="V" /> Dedicated campaign strategy</li>
           <li><img src="../Assets/check.svg" alt="V" /> Google & Bing Maps optimization</li>
         </ul>
-        <a href="../Contact/" class="choose-plan">Choose Plan</a>
+        <a href="../Contact/" class="cta-button">Choose Plan</a>
       </div>
       <div class="price-card">
-        <h2>Expert</h2>
+        <h2>RankMind full experince</h2>
         <p class="price">Custom</p>
         <p>Tailored solutions for large-scale digital projects.</p>
         <ul class="feature-checklist">
-          <li><img src="../Assets/check.svg" alt="V" /> Dedicated campaign strategy</li>
+          <li><img src="../Assets/check.svg" alt="V" /> Noticeable in ChatGPT, Gemini</li>
           <li><img src="../Assets/check.svg" alt="V" /> Aggressive AI Chatbot placement</li>
-          <li><img src="../Assets/check.svg" alt="V" /> Custom chatbot persona creation</li>
+          <li><img src="../Assets/check.svg" alt="V" /> Ads campaign managment</li>
         </ul>
-        <a href="../Contact/" class="choose-plan">Choose Plan</a>
+        <a href="../Contact/" class="cta-button">Choose Plan</a>
       </div>
     </div>
 
@@ -114,33 +103,18 @@
         <thead>
           <tr>
             <th>Features</th>
-            <th>Starter<br><span class="price-tag">$499</span></th>
-            <th>Advanced<br><span class="price-tag">$749</span></th>
-            <th>Expert<br><span class="price-tag">Custom</span></th>
+            <th>Starting<br><span class="price-tag">$749</span></th>
+            <th>Full<br><span class="price-tag">Custom</span></th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>Landing page</td>
-            <td><img src="../Assets/check.svg" alt="V" /></td>
-            <td><img src="../Assets/check.svg" alt="V" /></td>
-            <td><img src="../Assets/check.svg" alt="V" /></td>
-          </tr>
-          <tr>
-            <td>Full website</td>
-            <td></td>
+            <td>Mobile friendly, fast and custom website</td>
             <td><img src="../Assets/check.svg" alt="V" /></td>
             <td><img src="../Assets/check.svg" alt="V" /></td>
           </tr>
           <tr>
-            <td>Mobile responsive & fast</td>
-            <td><img src="../Assets/check.svg" alt="V" /></td>
-            <td><img src="../Assets/check.svg" alt="V" /></td>
-            <td><img src="../Assets/check.svg" alt="V" /></td>
-          </tr>
-          <tr>
-            <td>Basic SEO setup</td>
-            <td><img src="../Assets/check.svg" alt="V" /></td>
+            <td>Dedicated campaign strategy</td>
             <td><img src="../Assets/check.svg" alt="V" /></td>
             <td><img src="../Assets/check.svg" alt="V" /></td>
           </tr>
@@ -148,59 +122,40 @@
             <td>Google Business setup</td>
             <td><img src="../Assets/check.svg" alt="V" /></td>
             <td><img src="../Assets/check.svg" alt="V" /></td>
+          </tr>
+          <tr>
+            <td>Google & Bing Maps optimization</td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
+          </tr>
+          <tr>
+            <td>Ongoing SEO & content updates</td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
             <td><img src="../Assets/check.svg" alt="V" /></td>
           </tr>
           <tr>
             <td>AI Chatbot optimization (ChatGPT, Gemini)</td>
             <td></td>
             <td><img src="../Assets/check.svg" alt="V" /></td>
-            <td><img src="../Assets/check.svg" alt="V" /></td>
-          </tr>
-          <tr>
-            <td>Google & Bing Maps optimization</td>
-            <td></td>
-            <td><img src="../Assets/check.svg" alt="V" /></td>
-            <td><img src="../Assets/check.svg" alt="V" /></td>
-          </tr>
-          <tr>
-            <td>Ongoing SEO & content updates</td>
-            <td></td>
-            <td><img src="../Assets/check.svg" alt="V" /></td>
-            <td><img src="../Assets/check.svg" alt="V" /></td>
-          </tr>
-          <tr>
-            <td>Dedicated campaign strategy</td>
-            <td></td>
-            <td></td>
-            <td><img src="../Assets/check.svg" alt="V" /></td>
           </tr>
           <tr>
             <td>Real time marketing</td>
             <td></td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
+          </tr>
+          <tr>
+            <td>Google & Meta ads campaign managment</td>
             <td></td>
             <td><img src="../Assets/check.svg" alt="V" /></td>
           </tr>
           <tr>
-            <td>Google ads campaign managment</td>
-            <td><img src="../Assets/check.svg" alt="V" /></td>
-            <td><img src="../Assets/check.svg" alt="V" /></td>
-            <td><img src="../Assets/check.svg" alt="V" /></td>
-          </tr>
-          <tr>
-            <td>Noticeable on Yelp</td>
-            <td><img src="../Assets/check.svg" alt="V" /></td>
-            <td><img src="../Assets/check.svg" alt="V" /></td>
-            <td><img src="../Assets/check.svg" alt="V" /></td>
-          </tr>
-          <tr>
             <td></td>
-            <td><a href="../Contact/" class="choose-plan">Choose Starter</a></td>
-            <td><a href="../Contact/" class="choose-plan">Choose Advanced</a></td>
-            <td><a href="../Contact/" class="choose-plan">Choose Expert</a></td>
+            <td><a href="../Contact/" class="cta-button">Choose Advanced</a></td>
+            <td><a href="../Contact/" class="cta-button">Choose Expert</a></td>
           </tr>
         </tbody>
       </table>
-      <p class="compare-note">💬 Need something custom or just starting out? <a href="../Contact/">Contact us</a> for a free consultation.</p>
+      <p class="compare-note"><a href="../Contact/"><img src="../Assets/message.svg" alt="V" /></a> Need something custom or just starting out? <a href="../Contact/">Contact us</a> for a free consultation.</p>
     </section>
     <div class="pricing-boxes"> <!-- Not a real price section but reuse the CSS -->
       <div class="price-card">
