Facebook links, Packages name

--- a/Pricing/index.html
+++ b/Pricing/index.html
@@ -75,7 +75,7 @@
     
     <div class="pricing-boxes">
       <div class="price-card">
-        <h2>Starting with RankMind</h2>
+        <h2>Expert</h2>
         <p class="price">$749</p>
         <p>Ideal for growing businesses with more advanced needs.</p>
         <ul class="feature-checklist">
@@ -86,7 +86,7 @@
         <a href="../Contact/" class="cta-button">Choose Plan</a>
       </div>
       <div class="price-card">
-        <h2>RankMind full experince</h2>
+        <h2>Premium</h2>
         <p class="price">Custom</p>
         <p>Tailored solutions for large-scale digital projects.</p>
         <ul class="feature-checklist">
@@ -103,8 +103,8 @@
         <thead>
           <tr>
             <th>Features</th>
-            <th>Starting<br><span class="price-tag">$749</span></th>
-            <th>Full<br><span class="price-tag">Custom</span></th>
+            <th>Expert<br><span class="price-tag">$749</span></th>
+            <th>Premium<br><span class="price-tag">Custom</span></th>
           </tr>
         </thead>
         <tbody>
@@ -150,8 +150,8 @@
           </tr>
           <tr>
             <td></td>
-            <td><a href="../Contact/" class="cta-button">Choose Advanced</a></td>
             <td><a href="../Contact/" class="cta-button">Choose Expert</a></td>
+            <td><a href="../Contact/" class="cta-button">Choose Premium</a></td>
           </tr>
         </tbody>
       </table>
@@ -199,7 +199,7 @@
             <a href="https://x.com/Rank_Mind" target="_blank" aria-label="Twitter">
               <img src="../Images/twitter.png" alt="X" width="24" height="24">
             </a>
-            <a href="https://facebook.com/rankmind" target="_blank" aria-label="Facebook">
+            <a href="https://www.facebook.com/profile.php?id=61577253737796" target="_blank" aria-label="Facebook">
               <img src="../Images/facebook.PNG" alt="Facebook" width="24" height="24">
             </a>
             <a href="https://www.instagram.com/rank.mind/" target="_blank" aria-label="Instagram">
