--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             <a href="https://x.com/Rank_Mind" target="_blank" aria-label="Twitter">
               <img src="./Images/twitter.png" alt="X" width="24" height="24">
             </a>
-            <a href="https://facebook.com/rankmind" target="_blank" aria-label="Facebook">
+            <a href="https://www.facebook.com/profile.php?id=61577253737796" target="_blank" aria-label="Facebook">
               <img src="./Images/facebook.PNG" alt="Facebook" width="24" height="24">
             </a>
             <a href="https://www.instagram.com/rank.mind/" target="_blank" aria-label="Instagram">
