Capital charcter fix

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <!-- Optional fallback image -->
     </video>
     <div class="hero-content">
-      <h1>Rise Above the Noise</h1>
+      <h1>Rise Above The Noise</h1>
       <p>Get discovered by Google, ChatGPT, and the AI-powered future.</p>
       <a href="./Services/" class="cta-button">Explore Our Services</a>
     </div>
