Add content to the pricing table

--- a/Pricing/index.html
+++ b/Pricing/index.html
@@ -134,7 +134,16 @@
             <td><img src="../Assets/check.svg" alt="V" /></td>
           </tr>
           <tr>
-            <td>AI Chatbot optimization (ChatGPT, Gemini)</td>
+            <td>Business branding
+              <span class="badge badge-hot" aria-label="New feature">Hot</span>
+            </td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
+          </tr>
+          <tr>
+            <td>AI Chatbot optimization (ChatGPT, Gemini)
+              <span class="badge badge-new" aria-label="New feature">New</span>
+            </td>
             <td></td>
             <td><img src="../Assets/check.svg" alt="V" /></td>
           </tr>
@@ -144,7 +153,17 @@
             <td><img src="../Assets/check.svg" alt="V" /></td>
           </tr>
           <tr>
-            <td>Google & Meta ads campaign managment</td>
+            <td>Google ads campaign</td>
+            <td></td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
+          </tr>
+          <tr>
+            <td>Meta ads campaign</td>
+            <td></td>
+            <td><img src="../Assets/check.svg" alt="V" /></td>
+          </tr>
+          <tr>
+            <td>Social pages managment</td>
             <td></td>
             <td><img src="../Assets/check.svg" alt="V" /></td>
           </tr>
