--- a/Contact/index.html
+++ b/Contact/index.html
@@ -90,16 +90,16 @@
           <p>Let's help your business get discovered — by Google, ChatGPT, and your local customers.</p>
           <ul class="contact-info">
             <li><strong>Email:</strong> <a href="mailto:contact@rankmind.net">contact@rankmind.net</a></li>
-            <li><strong>Phone:</strong> <a href="tel:+19494666676">+1 (949) 466-6676</a></li>
+            <li><strong>Phone:</strong> <a href="tel:+972503220595">+97253220595</a></li>
             <li><strong>Location:</strong> Phoenix, USA</li>
           </ul>
           <h2>Free Consultation</h2>
           <div>
-            <a href="tel:+19494666676" class="fab-icon" title="Call Us">
+            <a href="tel:+972503220595" class="fab-icon" title="Call Us">
               <img src="../Assets/phone-call.svg" alt="Phone" />
             </a>
             <br>
-            <a href="https://wa.me/19494666676" target="_blank" class="fab-icon" title="WhatsApp">
+            <a href="https://wa.me/+972503220595" target="_blank" class="fab-icon" title="WhatsApp">
               <img src="../Assets/message.svg" alt="WhatsApp" />
             </a>
           </div>
@@ -113,10 +113,10 @@
       <img src="../Assets/info.svg" alt="Info" />
     </button>
     <div class="fab-options" id="fabOptions">
-      <a href="tel:+19494666676" class="fab-icon" title="Call Us">
+      <a href="tel:+972503220595" class="fab-icon" title="Call Us">
         <img src="../Assets/phone-call.svg" alt="Phone" />
       </a>
-      <a href="https://wa.me/19494666676" target="_blank" class="fab-icon" title="WhatsApp">
+      <a href="https://wa.me/+972503220595" target="_blank" class="fab-icon" title="WhatsApp">
         <img src="../Assets/message.svg" alt="WhatsApp" />
       </a>
       <a href="./Legal/Accessibilty/index.html" target="_blank" class="fab-icon" title="Accessibility Info">
