--- a/index.html
+++ b/index.html
@@ -221,10 +221,10 @@
       <img src="./Assets/info.svg" alt="Info" />
     </button>
     <div class="fab-options" id="fabOptions">
-      <a href="tel:+19494666676" class="fab-icon" title="Call Us">
+      <a href="tel:+972503220595" class="fab-icon" title="Call Us">
         <img src="./Assets/phone-call.svg" alt="Phone" />
       </a>
-      <a href="https://wa.me/19494666676" target="_blank" class="fab-icon" title="WhatsApp">
+      <a href="https://wa.me/+972503220595" target="_blank" class="fab-icon" title="WhatsApp">
         <img src="./Assets/message.svg" alt="WhatsApp" />
       </a>
       <a href="./Legal/Accessibilty/index.html" target="_blank" class="fab-icon" title="Accessibility Info">
