Add "About Us" section with company overview and services

--- a/index.html
+++ b/index.html
@@ -207,10 +207,28 @@
       </div>
     </section>
 
+    <section class="about-us">
+      <h2>About Us</h2>
+      <p>
+        RankMind is built for the new era of search — where Google results and AI answers work together. 
+        We specialize in positioning businesses so they appear both on search engines and inside AI platforms like ChatGPT and Gemini.
+      </p>
+      <br>
+      <p>
+        Our team comes from a strong software and engineering background.
+         We build fast, native-coded websites, optimize Google Business profiles,
+          and create complete AI-ready visibility strategies that outperform traditional marketing.
+      </p>
+      <br>
+      <p>
+        We focus on one thing: making sure your business is discoverable everywhere your customers search — today and in the future.
+      </p>
+    </section>
+
     <section class="cta-section">
       <div class="cta-content">
         <h2>Ready to Grow Your Local Visibility?</h2>
-        <p>Let’s build your powerful, fast, and AI-friendly website — together.</p>
+        <p>Let's build your powerful, fast, and AI-friendly website — together.</p>
         <a href="./Contact/" class="cta-button">Get Started</a>
       </div>
     </section>
