Revise hero section and service descriptions for clarity and impact in Hebrew

--- a/he/index.html
+++ b/he/index.html
@@ -105,9 +105,9 @@
     </video>
 
     <div class="hero-content">
-      <h1>לעלות מעל הרעש</h1>
-      <p>להיות גלויים בגוגל, ב-ChatGPT, ובעתיד שמונע על ידי AI.</p>
-      <a href="./Services/" class="cta-button">לגלות את השירותים</a>
+      <h1>שהלקוחות ימצאו אתכם</h1>
+      <p>נראות בגוגל, במנועי חיפוש מבוססי AI ובכל מקום שבו לקוחות מחפשים פתרונות.</p>
+      <a href="./Services/" class="cta-button">לשירותים שלנו</a>
     </div>
   </section>
 
@@ -116,15 +116,15 @@
       <div class="intro-inner">
         <h2>מה אנחנו עושים</h2>
         <p>
-          ב-RankMind אנחנו עוזרים לעסק שלך לבלוט איפה שזה באמת חשוב —
-          בגוגל, ב-ChatGPT, ובכלי AI שמעצבים את החיפוש של העתיד.
+          RankMind עוזרת לעסקים להופיע גבוה בגוגל, להיות נוכחים בכלי AI
+          ולהפוך תנועה דיגיטלית ללקוחות אמיתיים.
         </p>
         <br>
-        <a href="./Contact/" class="cta-button">צור קשר</a>
+        <a href="./Contact/" class="cta-button">דברו איתנו</a>
         <br>
         <p>
-          בין אם אתם עסק קטן או מותג בצמיחה,
-          אנחנו נותנים יתרון דיגיטלי: קוד נקי, SEO ברור, ונראות אמיתית בעידן ה-AI.
+          אנחנו משלבים קידום אתרים חכם, אתרים מהירים בקוד נקי
+          ואסטרטגיה ברורה שמביאה תוצאות — בלי רעש מיותר.
         </p>
       </div>
     </section>
@@ -133,16 +133,16 @@
       <h2>איך אנחנו עובדים</h2>
       <div class="features-grid">
         <div class="feature-item">
-          <h3>אתרים בקוד נקי</h3>
-          <p>בונים אתרים מהירים עם קוד נקי וסקיילבילי — בלי תבניות כבדות.</p>
+          <h3>אתרים שבנויים נכון</h3>
+          <p>אתרים מהירים בקוד נקי, מותאמים לקידום ולהמרות — בלי תבניות כבדות.</p>
         </div>
         <div class="feature-item">
-          <h3>SEO חד וברור</h3>
-          <p>אופטימיזציה לכל עמוד כדי לדרג גבוה בגוגל ולהתאים גם לכלי חיפוש מבוססי AI.</p>
+          <h3>קידום אתרים חכם</h3>
+          <p>אופטימיזציה מדויקת לגוגל ולמערכות AI שמבוססת על נתונים, לא ניחושים.</p>
         </div>
         <div class="feature-item">
-          <h3>נראות ל-AI</h3>
-          <p>העסק שלך יהיה ניתן לגילוי לא רק על ידי אנשים — אלא גם על ידי כלי AI.</p>
+          <h3>נראות בעידן ה-AI</h3>
+          <p>העסק שלכם מופיע גם בתשובות של ChatGPT, Gemini וכלי חיפוש מתקדמים.</p>
         </div>
       </div>
     </section>
@@ -154,35 +154,35 @@
           <div class="step-circle">1</div>
           <div class="step-content">
             <h3>היכרות</h3>
-            <p>מבינים את העסק, היעדים והשוק המקומי שלך.</p>
+            <p>לומדים את העסק, התחום והקהל שאליו אתם פונים.</p>
           </div>
         </div>
         <div class="process-step">
           <div class="step-circle">2</div>
           <div class="step-content">
             <h3>אסטרטגיה ו-SEO</h3>
-            <p>בונים תוכנית תוכן ו-SEO שמותאמת גם לגוגל וגם לפלטפורמות AI.</p>
+            <p>בונים אסטרטגיית קידום ותוכן שמתאימה לגוגל ולחיפוש מבוסס AI.</p>
           </div>
         </div>
         <div class="process-step">
           <div class="step-circle">3</div>
           <div class="step-content">
             <h3>אתר בעבודת יד</h3>
-            <p>מפתחים אתר מאפס ב-HTML/CSS/JS — בלי בלאגן.</p>
+            <p>מפתחים אתר מהיר ומדויק — בלי פלטפורמות כבדות ובלי קיצורי דרך.</p>
           </div>
         </div>
         <div class="process-step">
           <div class="step-circle">4</div>
           <div class="step-content">
             <h3>השקה ואופטימיזציה</h3>
-            <p>משיקים, מחברים אנליטיקס, ומשפרים ביצועים ונראות.</p>
+            <p>משיקים, מודדים ביצועים ומבצעים שיפורים על בסיס נתונים.</p>
           </div>
         </div>
         <div class="process-step">
           <div class="step-circle">5</div>
           <div class="step-content">
             <h3>ליווי מתמשך</h3>
-            <p>עדכונים, תוכן ושיפור מתמיד ככל שהעסק גדל.</p>
+            <p>ליווי שוטף, שיפורים מתמשכים וצמיחה לאורך זמן.</p>
           </div>
         </div>
       </div>
@@ -195,43 +195,43 @@
           <div class="icon">
             <img src="/Assets/openai.svg" alt="OpenAI" />
           </div>
-          <h3>מוכן ל-AI</h3>
-          <p>נראות בכלי AI כמו ChatGPT, Google Gemini ועוד.</p>
+          <h3>מותאם לעולם ה-AI</h3>
+          <p>נראות בתשובות של מערכות AI ובחיפוש המתקדם של גוגל.</p>
         </div>
         <div class="benefit-item">
           <div class="icon">
             <img src="/Assets/googlemaps.svg" alt="Google Maps Icon" />
           </div>
-          <h3>מומחי Local SEO</h3>
-          <p>עוזרים לעסקים מקומיים להופיע גבוה בגוגל מפות ובחיפוש האורגני.</p>
+          <h3>קידום מקומי מדויק</h3>
+          <p>עוזרים לעסקים להופיע גבוה בגוגל וב-Google Maps.</p>
         </div>
         <div class="benefit-item">
           <div class="icon">
             <img src="./../Assets/whatsapp.svg" alt="WhatsApp" />
           </div>
-          <h3>תמיכה אנושית</h3>
-          <p>עבודה מול בן אדם אמיתי — זמינות, שקיפות ותוצאות.</p>
+          <h3>אנשים אמיתיים</h3>
+          <p>עבודה ישירה, זמינות מלאה ושקיפות לאורך כל הדרך.</p>
         </div>
         <div class="benefit-item">
           <div class="icon">
             <img src="/Assets/rabbit.svg" alt="Speed site" />
           </div>
-          <h3>מהירות לפני הכול</h3>
-          <p>אתר שטוען מהר, מותאם מובייל ודסקטופ.</p>
+          <h3>מהירות וביצועים</h3>
+          <p>אתרים קלים ומהירים שמעניקים חוויית משתמש מצוינת.</p>
         </div>
         <div class="benefit-item">
           <div class="icon">
             <img src="/Assets/settings.svg" alt="Build" />
           </div>
-          <h3>בנוי בהתאמה</h3>
-          <p>בלי WordPress — רק קוד נקי שממיר.</p>
+        <h3>פיתוח בהתאמה אישית</h3>
+        <p>בלי WordPress — רק קוד נקי שמתאים בדיוק לעסק.</p>
         </div>
         <div class="benefit-item">
           <div class="icon">
             <img src="/Assets/shield.svg" alt="Security" />
           </div>
-          <h3>אבטחה מובנית</h3>
-          <p>אתר סטטי ללא שטח תקיפה — נקי, מהיר ומאובטח.</p>
+          <h3>אבטחה ושקט נפשי</h3>
+          <p>אתר סטטי, יציב ומאובטח עם מינימום נקודות תורפה.</p>
         </div>
       </div>
     </section>
@@ -239,26 +239,26 @@
     <section class="about-us">
       <h2>אודות</h2>
       <p>
-        RankMind נבנתה לעידן החדש של החיפוש — שבו תוצאות גוגל ותשובות AI עובדים יחד.
-        אנחנו מתמחים בהצגת עסקים גם במנועי חיפוש וגם בתוך פלטפורמות AI.
+        RankMind נולדה מתוך הבנה שעולם החיפוש משתנה —
+        מגוגל בלבד, לעולם שבו גם מערכות AI קובעות מי יופיע ומי ייעלם.
       </p>
       <br>
       <p>
-        הצוות שלנו מגיע מרקע חזק של פיתוח והנדסה.
-        אנחנו בונים אתרים מהירים בקוד נקי, משפרים פרופילי Google Business,
-        ומייצרים אסטרטגיות נראות מתקדמות.
+        אנחנו מגיעים מרקע טכנולוגי חזק ומשלבים פיתוח, קידום ואסטרטגיה
+        כדי לבנות נוכחות דיגיטלית שעובדת לאורך זמן.
       </p>
       <br>
       <p>
-        המטרה שלנו אחת: לוודא שהעסק שלך ניתן לגילוי בכל מקום שבו הלקוחות מחפשים — היום ובעתיד.
+        המטרה שלנו פשוטה:
+        לעזור ללקוחות למצוא אתכם — היום, ומחר.
       </p>
     </section>
 
     <section class="cta-section">
       <div class="cta-content">
-        <h2>מוכנים לצמוח עם נראות מקומית חזקה?</h2>
-        <p>בואו נבנה יחד אתר מהיר, חזק וידידותי ל-AI.</p>
-        <a href="./Contact/" class="cta-button">מתחילים</a>
+        <h2>רוצים לשפר את הנוכחות הדיגיטלית שלכם?</h2>
+        <p>נדבר, נבין את הצורך, ונבנה פתרון שעובד.</p>
+        <a href="./Contact/" class="cta-button">לתיאום שיחה</a>
       </div>
     </section>
   </main>
