Fix Hebrew CSS file and layout in the index main file

--- a/he/Pricing/index.html
+++ b/he/Pricing/index.html
@@ -46,6 +46,7 @@
   <!-- Reuse the existing Pricing styles -->
   <link rel="stylesheet" href="../../Pricing/pricing.css" />
   <link rel="stylesheet" href="../../Styles/footer.css" />
+  <link rel="stylesheet" href="../he.css" />
 </head>
 
 <body>
