--- a/he/Services/index.html
+++ b/he/Services/index.html
@@ -46,6 +46,7 @@
   <!-- Reuse the existing Services styles -->
   <link rel="stylesheet" href="../../Services/services.css" />
   <link rel="stylesheet" href="../../Styles/footer.css" />
+  <link rel="stylesheet" href="../he.css" />
 </head>
 
 <body>
