--- a/he/Contact/index.html
+++ b/he/Contact/index.html
@@ -44,6 +44,7 @@
   <link rel="stylesheet" href="../../Styles/ui.css" />
   <link rel="stylesheet" href="../../Styles/pages.css" />
   <link rel="stylesheet" href="../../Styles/footer.css" />
+  <link rel="stylesheet" href="../he.css" />
 </head>
 
 <body>
