--- a/he/index.html
+++ b/he/index.html
@@ -45,6 +45,7 @@
   <link rel="stylesheet" href="../Styles/pages.css" />
   <link rel="stylesheet" href="../Styles/index.css" />
   <link rel="stylesheet" href="../Styles/footer.css" />
+  <link rel="stylesheet" href="./he.css" />
 </head>
 
 <body>
