Fix accessibility links and update Hebrew terminology across multiple pages

--- a/Services/index.html
+++ b/Services/index.html
@@ -457,7 +457,7 @@
       <a href="https://wa.me/+972503220595" target="_blank" class="fab-icon" title="WhatsApp">
         <img src="../Assets/message.svg" alt="WhatsApp" />
       </a>
-      <a href="./Legal/Accessibilty/index.html" target="_blank" class="fab-icon" title="Accessibility Info">
+      <a href="../Legal/Accessibility/" target="_blank" class="fab-icon" title="Accessibility Info">
         <img src="../Assets/accessibility.svg" alt="Accessibility" />
       </a>
     </div>
@@ -502,7 +502,7 @@
           <ul>
             <li><a href="../Legal/Privacy/" target="_blank" rel="noopener">Privacy Policy</a></li>
             <li><a href="../Legal/Terms/" target="_blank" rel="noopener">Terms of Use</a></li>
-            <li><a href="../Legal/Accessibilty/" target="_blank" rel="noopener">Accessibility</a></li>
+            <li><a href="../Legal/Accessibility/" target="_blank" rel="noopener">Accessibility</a></li>
           </ul>
         </div>
       </div>
